# smb2-learning

./: .gitignore  CMakeLists.txt  smbl.conf
src/core/: CMakeLists.txt  client.c  client.h  common.h  config.c  config.h  hash.c  hash.h  list.c  list.h  logger.c  logger.h  negotiate.c  negotiate.h  queue.c  queue.h  smbl.c  smbl.h  util.h
src/extensions/: CMakeLists.txt
src/inc/: CMakeLists.txt  common.h  constants.h  ntstatus.h
src/tests/api/: CMakeLists.txt  api.c
